--- a/ds1m-b/Paula-B/index.html
+++ b/ds1m-b/Paula-B/index.html
@@ -27,7 +27,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
 
-    <script src="./js/sign-language.js"></script>
+    <!-- <script src="./js/sign-language.js"></script> -->
     <script src="https://kit.fontawesome.com/6cc8a6f404.js" crossorigin="anonymous"></script>
 
     <title>a cat's life</title>
@@ -153,7 +153,7 @@
                     </a>
                 </div>
             </div>
-            <div class="name">
+            <div class="name_text">
                 <p> Angorá </p>
                 <P>Persa </P>
                 <P>Spynks</P>
@@ -164,6 +164,45 @@
                     <a href="https://www.peritoanimal.com.br/racas-de-gatos.html" target="_blank">Outros</a>
                 </li>
             </ul>
+        </section>
+        <section class="cuidados" id="cuidados">
+            <div class="icon">
+                <h2 class="title_main">CUIDADOS</h2>
+                <img src="./img/PATINHA.png" alt="" class="icon2">
+            </div>
+            <div class="cuidados_container">
+                <div class="cuidado">
+                    <h2 class="cuidado_title">Nem sempre é fácil saber se seu gato está feliz. Eles podem mostrar seu amor ronronando e se esfregando em você, mas alguns gatos são mais distantes do que outros, e pode ser difícil decifrar suas vocalizações e comportamentos. Seja
+                        você um novo tutor ou um dono experiente, existem várias coisas fáceis que você pode fazer para ajudar a manter seu gato feliz e saudável. </h2>
+                </div>
+                <div class="list">
+                    <li class="cuidados_list">
+
+                        <p class="list">
+                            🐈1 - Preserve a Caixa de Areia Sempre Limpa.
+                        </p>
+                        <p class="list">
+                            🐈2 - Consultas Regulares ao Veterinário.
+                        </p>
+                        <p class="list">
+                            🐈3 - Fazer uma Castração.
+                        </p>
+                        <p class="list">
+                            🐈4 - Sempre Escove o Pelo do Seu Gato.
+                        </p>
+                        <p class="list">
+                            🐈5 - Ofereça uma Ração de Boa Qualidade e água fresca.
+                        </p>
+                        <p class="list">
+                            🐈6 - Brinque com Seu Gato.
+                        </p>
+                        <p class="list">
+                            🐈7 - Aprecie o seu comportamento.
+                        </p>
+                    </li>
+                </div>
+
+            </div>
         </section>
         <section class="curiosidades" id="curiosidades">
             <div class="icon">
@@ -228,45 +267,7 @@
 
 
         </section>
-        <section class="cuidados" id="cuidados">
-            <div class="icon">
-                <h2 class="title_main">CUIDADOS</h2>
-                <img src="./img/PATINHA.png" alt="" class="icon2">
-            </div>
-            <div class="cuidados_container">
-                <div class="cuidado">
-                    <h2 class="cuidado_title">Nem sempre é fácil saber se seu gato está feliz. Eles podem mostrar seu amor ronronando e se esfregando em você, mas alguns gatos são mais distantes do que outros, e pode ser difícil decifrar suas vocalizações e comportamentos. Seja
-                        você um novo tutor ou um dono experiente, existem várias coisas fáceis que você pode fazer para ajudar a manter seu gato feliz e saudável. </h2>
-                </div>
-                <div class="list">
-                    <li class="cuidados_list">
 
-                        <p class="list">
-                            🐈1 - Preserve a Caixa de Areia Sempre Limpa.
-                        </p>
-                        <p class="list">
-                            🐈2 - Consultas Regulares ao Veterinário.
-                        </p>
-                        <p class="list">
-                            🐈3 - Fazer uma Castração.
-                        </p>
-                        <p class="list">
-                            🐈4 - Sempre Escove o Pelo do Seu Gato.
-                        </p>
-                        <p class="list">
-                            🐈5 - Ofereça uma Ração de Boa Qualidade e água fresca.
-                        </p>
-                        <p class="list">
-                            🐈6 - Brinque com Seu Gato.
-                        </p>
-                        <p class="list">
-                            🐈7 - Aprecie o seu comportamento.
-                        </p>
-                    </li>
-                </div>
-
-            </div>
-        </section>
         <section class="porque" id="porque">
             <div class="icon">
                 <h2 class="title_main"> PORQUE ESCOLHER UM GATO?</h2>
