tentando colocar o carrossel

--- a/ds1m-a/claramartins/index.html
+++ b/ds1m-a/claramartins/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,800;1,700&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/121a930925.js" crossorigin="anonymous"></script>
+    <script src="./js/sign-language.js"></script>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/menu.css">
@@ -19,6 +21,7 @@
     <link rel="stylesheet" href="./css/albums.css">
     <link rel="stylesheet" href="./css/photobook.css">
     <link rel="stylesheet" href="./css/social_media.css">
+    
 
     <title>Blackpink in Your Area!</title>
 </head>
@@ -206,6 +209,12 @@
         </div>
        
     </footer>
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
 </body>
 
 </html>
