--- a/ds1m-b/lucasvinicius/index.html
+++ b/ds1m-b/lucasvinicius/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./css/bo1.css">
     <link rel="stylesheet" href="./css/imgBo1.css">
     <link rel="stylesheet" href="./css/textos.css">
+    <link rel="stylesheet" href="./css/textImg.css">
     <title>Call of Duty: Black Ops</title>
 </head>
 <body>
@@ -59,16 +60,17 @@
             <div id="linha-horizontal"></div>
         </section>
         <section class="bo1" id="bo1">
-           <div class="logoBo1">
-               <img src="./img/cod-bo-logo 1.png" alt="logoBo1" class="logo_bo1">
-           </div> 
-           <div class="imgBo1">
-                <img src="./img/2011-05-20-codlackops-5 1.png" alt="imgbo1" class="img_bo1">
-                <div class="linhas">
-                    <div id="linha-pequena"></div>
-                    <div id="linha-pequena2"></div>
+                <div class="textImg">
+                    <div class="imagens">
+                        <img src="./img/cod-bo-logo 1.png" alt="logoBo1" class="logo_bo1">
+                        <img src="./img/2011-05-20-codlackops-5 1.png" alt="imgbo1" class="img_bo1">
+                    </div>
+                    <span>
+                        Call of Duty: Black Ops
+                        1960, durante o auge da Guerra Fria, SAD e SOG são duas divisões da CIA que actuam atrás das linhas inimigas. A história gira à volta de uma arma química experimental alemã roubada pelos soviéticos no fim da 2ª Guerra Mundial. É aqui que conhecemos pela primeira vez o agente 
+                        lex Mason, aquando duma missão de assassinato de Fidel Castro, em Cuba. É o primeiro jogo a incluir o modo de zombies.
+                    </span>
                 </div>
-           </div>
         </section>
         <section class="bo2" id="bo2"></section>
         <section class="bo3" id="bo3"></section>
