seção mapa adicionada

--- a/ds1t-a/lohannes/index.html
+++ b/ds1t-a/lohannes/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/descricao.css">
     <link rel="stylesheet" href="./css/atla.css">
     <link rel="stylesheet" href="./css/icones-atla.css">
+    <link rel="stylesheet" href="./css/mapa.css">
     <title>Avatar - A Lenda</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Marcellus+SC&family=Permanent+Marker&family=Sarala:wght@400;700&display=swap"
@@ -114,7 +115,131 @@
             </div>
         </section>
         <section id="atlok_Personagens"></section>
-        <section id="nacoes"></section>
+        <section id="nacoes">
+            <img class="mapa" src="./images/Map.jpg" alt="">
+            <div class="instrucoes">
+                <p class="instrucao1">Aperte algum dos 4 botões para localizar todas as regiões no mapa.</p>
+                <p class="instrucao2">Coloque o mouse sobre uma das regiões para conhecer um dos principais locais.</p>
+            </div>
+            <div class="botoesEAreas">
+                <div class="botoes1">
+                    <a href="#map" type="" class="agua">
+                        <img src="./images/agua.png" alt="" class="agua_icon">
+                        <div class="tribos">
+                            <div class="triboNorte">
+                                <div class="aguaNorte">
+                                    <div id="info">
+                                        <div class="texto">
+                                            <h2 class="titulo">Tribo Norte</h2>
+                                            <p class="descricao">Uma das tribos da Água, extremamente avançada e
+                                                desenvolvida, diferente de sua "irmã".</p>
+                                        </div>
+                                        <div class="foto">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="triboSul">
+                                <div class="aguaSul">
+                                    <div id="info">
+                                        <div class="texto">
+                                            <h2 class="titulo">Tribo Sul</h2>
+                                            <p class="descricao">Uma das tribos da Água, não tão desenvolvida quanto sua
+                                                "irmã" do norte.</p>
+                                        </div>
+                                        <div class="foto">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#map" type="" class="fogo">
+                        <img src="./images/fogo.png" alt="" class="fogo_icon">
+                        <div class="nacaoFogo">
+                            <div class="palacio">
+                                <div id="info">
+                                    <div class="texto">
+                                        <h2 class="titulo">Palácio do Fogo</h2>
+                                        <p class="descricao">Onde mora e vive a família real do "Senhor do Fogo",
+                                            governador da nação.</p>
+                                    </div>
+                                    <div class="foto"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="botoes2">
+                    <a href="#map" type="" class="terra">
+                        <img src="./images/terra.png" alt="" class="terra_icon">
+                        <div class="nacaoTerra">
+                            <div class="baSingSe">
+                                <div id="info">
+                                    <div class="texto">
+                                        <h2 class="titulo">Ba Sing Se</h2>
+                                        <p class="descricao">Maior cidade da Nação da Terra, mas com exrema desigualdade
+                                            e leis muito pesadas.</p>
+                                    </div>
+                                    <div class="foto">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#map" type="" class="ar">
+                        <img src="./images/ar.png" alt="" class="ar_icon">
+                        <div class="ilhaNoroeste">
+                            <div class="ilhaDosMongesNO">
+                                <div id="info">
+                                    <div class="texto">
+                                        <h2 class="titulo">Ilha dos Monges</h2>
+                                        <p class="descricao">Uma das ilhas em que moram os monges dominadores de ar,
+                                            treinando sua ligação com os espíritos.</p>
+                                    </div>
+                                    <div class="foto">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ilhasSul">
+                            <div class="ilhaSudeste">
+                                <div class="ilhaDosMongesSE">
+                                    <div id="info">
+                                        <div class="texto">
+                                            <h2 class="titulo">Ilha dos Monges</h2>
+                                            <p class="descricao">Uma das ilhas em que moram os monges dominadores de ar,
+                                                treinando sua ligação com os espíritos.</p>
+                                        </div>
+                                        <div class="foto">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="ilhaSudoeste">
+                                <div class="ilhaDosMongesSO">
+                                    <div id="info">
+                                        <div class="texto">
+                                            <h2 class="titulo">Ilha dos Monges</h2>
+                                            <p class="descricao">Uma das ilhas em que moram os monges dominadores de ar,
+                                                treinando sua ligação com os espíritos.</p>
+                                        </div>
+                                        <div class="foto">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
         <section id="elementos"></section>
     </main>
     <footer></footer>
