um icone pronto

--- a/ds1t-a/lohannes/index.html
+++ b/ds1t-a/lohannes/index.html
@@ -95,7 +95,12 @@
                                     dominasse todas as outras nações do mundo.</p>
                             </div>
                             <div class="info2">
-                                <div class="elemento"></div>
+                                <div class="elemento">
+                                    <div class="avatarElemento">
+                                        <img src="./images/avatar-elemento.png" alt="">
+                                    </div>
+                                    <p class="elementoNome">avatar</p>
+                                </div>
                                 <img src="./images/inicio.gif" alt="" class="aangGif">
                             </div>
                         </div>
@@ -130,7 +135,7 @@
                                 <div class="aguaNorte">
                                     <div id="info">
                                         <div class="texto">
-                                            <h2 class="titulo">Tribo Norte</h2>
+                                            <h2 class="tituloM">Tribo Norte</h2>
                                             <p class="descricao">Uma das tribos da Água, extremamente avançada e
                                                 desenvolvida, diferente de sua "irmã".</p>
                                         </div>
@@ -144,7 +149,7 @@
                                 <div class="aguaSul">
                                     <div id="info">
                                         <div class="texto">
-                                            <h2 class="titulo">Tribo Sul</h2>
+                                            <h2 class="tituloM">Tribo Sul</h2>
                                             <p class="descricao">Uma das tribos da Água, não tão desenvolvida quanto sua
                                                 "irmã" do norte.</p>
                                         </div>
@@ -162,7 +167,7 @@
                             <div class="palacio">
                                 <div id="info">
                                     <div class="texto">
-                                        <h2 class="titulo">Palácio do Fogo</h2>
+                                        <h2 class="tituloM">Palácio do Fogo</h2>
                                         <p class="descricao">Onde mora e vive a família real do "Senhor do Fogo",
                                             governador da nação.</p>
                                     </div>
@@ -179,7 +184,7 @@
                             <div class="baSingSe">
                                 <div id="info">
                                     <div class="texto">
-                                        <h2 class="titulo">Ba Sing Se</h2>
+                                        <h2 class="tituloM">Ba Sing Se</h2>
                                         <p class="descricao">Maior cidade da Nação da Terra, mas com exrema desigualdade
                                             e leis muito pesadas.</p>
                                     </div>
@@ -196,7 +201,7 @@
                             <div class="ilhaDosMongesNO">
                                 <div id="info">
                                     <div class="texto">
-                                        <h2 class="titulo">Ilha dos Monges</h2>
+                                        <h2 class="tituloM">Ilha dos Monges</h2>
                                         <p class="descricao">Uma das ilhas em que moram os monges dominadores de ar,
                                             treinando sua ligação com os espíritos.</p>
                                     </div>
@@ -211,7 +216,7 @@
                                 <div class="ilhaDosMongesSE">
                                     <div id="info">
                                         <div class="texto">
-                                            <h2 class="titulo">Ilha dos Monges</h2>
+                                            <h2 class="tituloM">Ilha dos Monges</h2>
                                             <p class="descricao">Uma das ilhas em que moram os monges dominadores de ar,
                                                 treinando sua ligação com os espíritos.</p>
                                         </div>
@@ -225,7 +230,7 @@
                                 <div class="ilhaDosMongesSO">
                                     <div id="info">
                                         <div class="texto">
-                                            <h2 class="titulo">Ilha dos Monges</h2>
+                                            <h2 class="tituloM">Ilha dos Monges</h2>
                                             <p class="descricao">Uma das ilhas em que moram os monges dominadores de ar,
                                                 treinando sua ligação com os espíritos.</p>
                                         </div>
