slide em processo

--- a/ds1t-a/Alexssandro/index.html
+++ b/ds1t-a/Alexssandro/index.html
@@ -78,19 +78,20 @@
 
                         <div class="descricao-cv">
 
-                            <img src="../Alexssandro/img/game-icons_coffee-cup-marrom.png" alt="">
-                            <div class="texto">
+                            <img class="cafe-cv" src="../Alexssandro/img/game-icons_coffee-cup-marrom.png" alt="">
+                            <div class="texto-cv">
 
-                                <h1>BEM VINDO</h1>
+                                <h1>Café Expresso</h1>
                                 <P>
-                                    A CaféMania é uma empresa nova no mercado que tem como foco entregar cafés variados e personalizáveis com a melhor qualidade por toda São Paulo.
-                                    Com um trabalho honesto e eficiente, nós da CaféMania buscamos a melhor qualidade de serviço para nossos clientes!
+                                    é uma bebida mais encorpada e tem um sabor mais intenso do que o café coado e utiliza uma quantidade de cafeína menor. 
+                                    Além disso, possui uma pequena espuma densa que cobre a parte superior da bebida e normalmente é servido em shots menores, em torno de 30 ml.
                                 </P>
 
                             </div>
+                            
                         </div>
 
-                        <img src="../Alexssandro/img/Cafe-expresso.png" alt="">
+                        <img class="imagem-cv" src="../Alexssandro/img/Cafe-expresso.png" alt="">
 
                     </div>
 
