--- a/ds1m-b/viniciusNunes/index.html
+++ b/ds1m-b/viniciusNunes/index.html
@@ -401,6 +401,6 @@
         ></span
       >
     </footer>
-    <script src="mobile-navbar.js"></script>
+    <script src="./mobile-navbar.js"></script>
   </body>
 </html>
