--- a/ds1t-b/André Luiz/index.html
+++ b/ds1t-b/André Luiz/index.html
@@ -145,13 +145,13 @@
             <img src="./img/criador-image.png" alt="Imagem do criador">
             <p class="criador-text">André Luiz</p>
             <div class="icons-container">
-                <a href="#" aria-label="botao rede social instagram">
+                <a href="https://www.instagram.com/andreluisconstanino/" aria-label="botao rede social instagram">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#" aria-label="botao rede social github">
+                <a href="https://github.com/AndreLuisConstantino" aria-label="botao rede social github">
                     <i class="fa-brands fa-github"></i>
                 </a>
-                <a href="#" aria-label="botao rede social facebook">
+                <a href="https://www.facebook.com/andreluis.constanino.1/" aria-label="botao rede social facebook">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
             </div>
