Ajustado home e composers para responsividade de ttablet

--- a/ds1m-b/felipeflorencio/index.html
+++ b/ds1m-b/felipeflorencio/index.html
@@ -84,13 +84,13 @@
             </li>
         </ul>
         <nav class="composers__buttons buttons">
-            <button aria-label="Previous image" id="left-button-composers">Previous</button>
-            <button aria-label="Next Image" id="right-button-composers">Next</button>
+            <a class="home-link" href="#home">
+                <img src="./img/circle-1.png" alt="">
+            </a>
+            <button aria-label="Previous image" id="left-button-composers"></button>
         </nav>
-        <a class="home-link" href="#home">
-            <img src="./img/circle-1.png" alt="">
-        </a>
-        <img src="./img/bg-composers.png" alt="" id="bgcomposers"> 
+        <img src="./img/bg-composers.png" alt="" id="bgcomposers">
+        <img src="./img/bg-composers-tablet.png" id="bgcomposers-tablet"alt=""> 
     </section>
     <section class="instruments" id="instruments">
         <p class="instruments__info">Alguns instrumentos são mais propensos para a música clássica<br>Estes possuem propriedades de material e de tempo que reforçam isso.</p>
